--- a/public/About/index.html
+++ b/public/About/index.html
@@ -34,7 +34,7 @@
 
         <li> <a class="navbar-text" href="../Contact/index.html">Contact</a> </li>
 
-        <li> <a class="navbar-text" href="../Blog/index.html">Blog</a></li>
+        <!-- <li> <a class="navbar-text" href="../Blog/index.html">Blog</a></li> -->
     
     
 </nav>
