--- a/public/About/index.html
+++ b/public/About/index.html
@@ -51,7 +51,7 @@
             though my main interests are pentesting and networking.
             <br/>
             <br/>
-            I'm looking for oppurtinites surrounding the tech scene,
+            I'm looking for opportunities surrounding the tech scene,
             if you think you might have something for me, please don't hesitate to reach out and contact me.</p>
         </article>
     
