fixed anchors to new project page

--- a/public/Contact/index.html
+++ b/public/Contact/index.html
@@ -34,7 +34,7 @@
 
         <li> <a id="selected-heading" class="navbar-text" href="../Contact/">Contact</a> </li>
 
-        <!-- <li> <a class="navbar-text" href="../Blog/index.html">Blog</a></li> -->
+        <li> <a class="navbar-text" href="../Projects/index.html">Projects</a></li>
     
     
     </ul>
