--- a/public/About/index.html
+++ b/public/About/index.html
@@ -33,7 +33,7 @@
 
         <li> <a class="navbar-text" href="../Contact/index.html">Contact</a> </li>
 
-        <!-- <li> <a class="navbar-text" href="../Blog/index.html">Blog</a></li> -->
+        <li> <a class="navbar-text" href="../Projects/index.html">Projects</a></li>
     
     
 </ul>
