--- a/public/Projects/geo<>code/index.html
+++ b/public/Projects/geo<>code/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
     <link href="https://fonts.googleapis.com/css?family=Cabin|Ubuntu&display=swap" rel="stylesheet"> 
 
@@ -37,7 +37,7 @@
 
         <li> <a class="navbar-text" href="../Contact/">Contact</a> </li>
 
-        <li> <a  id="selected-heading" class="navbar-text" href="../Projects/index.html">Projects</a> </li>
+        <li> <a  id="selected-heading" class="navbar-text" href="../index.html">Projects</a> </li>
 
 
     
@@ -59,13 +59,13 @@
                                 <li>
                                     <ul class="list-unstyled" id="blog-list">
                                         <li>
-                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="../FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="../noxlock.dev/index.html">noxlock.dev</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
+                                            <a href="../geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -76,44 +76,9 @@
             </div>
 
                 <div id="content">
-                    <h2>Projects</h2>
-                    <h3>Under construction</h3>
+                    <h2>Under construction</h2>
 
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-6 text-sm-center col-sm-4 py-5">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">FrameInstructor</h4>
-                                        <h5 class="card-subtitle text-muted">Python</h5>
-                                        <p class="card-text"> A Discord chat bot that retrives data from fANZyo's T7 API</p>
-                                        <a href="./FrameInstructor/index.html" class="card-link">View Page</a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class ="col-6 text-sm-center col-sm-4 py-5">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">noxlock.dev</h4>
-                                        <h5 class="card-subtitle text-muted">HTML & CSS</h5>
-                                        <p class="card-text">The website you're staring at right now, my personal portfolio.</p>
-                                        <a href="./noxlock.dev/index.html" class="card-link">View Page</a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class ="col-6 text-sm-center col-sm-4 py-5">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">Geo<>Code</h4>
-                                        <h5 class="card-subtitle text-muted">Python</h5>
-                                        <p class="card-text">A Python CLI app that performs geocode operations</p>
-                                        <a href="./geo<>code/index.html" class="card-link">View Page</a>
-                                    </div>
-                                </div>
-                            </div>
-
+                            
                         </div>
                     </div>
                 </div>
