Projects index is now responsive

--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <link href="https://fonts.googleapis.com/css?family=Cabin|Ubuntu&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin|Ubuntu&display=swap" > 
 
 
 
@@ -55,9 +55,9 @@
             
                     <ul class="list-unstyled components">
                         <li>
-                            <ul class="list-unstyled components">
-                                <li>
-                                    <ul class="list-unstyled" id="blog-list">
+                            <!-- <ul class="list-unstyled components">
+                                <li> -->
+                                    <ul class="list-unstyled" id="project-list">
                                         <li>
                                             <a href="./FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
@@ -77,11 +77,10 @@
 
                 <div id="content">
                     <h2>Projects</h2>
-                    <h3>Under construction</h3>
 
                     <div class="container">
                         <div class="row">
-                            <div class="col-6 text-sm-center col-sm-4 py-5">
+                            <div class="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">FrameInstructor</h4>
@@ -92,7 +91,7 @@
                                 </div>
                             </div>
 
-                            <div class ="col-6 text-sm-center col-sm-4 py-5">
+                            <div class ="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">noxlock.dev</h4>
@@ -103,7 +102,7 @@
                                 </div>
                             </div>
 
-                            <div class ="col-6 text-sm-center col-sm-4 py-5">
+                            <div class ="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">Geo<>Code</h4>
