Worked on geo<>code project page

--- a/public/Projects/geo<>code/index.html
+++ b/public/Projects/geo<>code/index.html
@@ -89,7 +89,7 @@
                         </p>
                         </br>
                         <p>
-                            The application carries out it's functions by making calls to Google's Maps API, which is done in python by using the googlemaps package. argparse stuff
+                            The application carries out it's functions by making calls to Google's Maps API, which is done in python by using the googlemaps package. The application can be used through the CLI menu, or it can also be run with a single command from the shell using arguments.
                         </p>
                     </div>
                 </div>
