--- a/public/Projects/geo<>code/index.html
+++ b/public/Projects/geo<>code/index.html
@@ -59,13 +59,13 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="../FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="../noxlock.dev/index.html">noxlock.dev</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
+                                            <a href="../geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -77,7 +77,7 @@
 
                 <div id="content">
                     <h2>Geo<>Code</h2>
-                        <h3> <a href="https://github.com/noxlock/GMaps-GeoCode">Git Repo</a></h3>
+                        <h3> <a target="blank" href="https://github.com/noxlock/GMaps-GeoCode">Git Repo</a></h3>
                         <p>
                             Geo<>Code was my first ever project while studying at Coder Academy.
                         </br>
