worked on first two project pages, updated about page

--- a/public/About/index.html
+++ b/public/About/index.html
@@ -48,7 +48,7 @@
             <h4>Hi, I'm Noxlock. </h4> <br/>  
             <p>
             I'm a junior developer interested in all things cyber,
-            though my main interests are pentesting and networking.
+            though my main interests is penetration testing, I'd like to be a developer for a while.
             <br/>
             <br/>
             I'm looking for opportunities surrounding the tech scene,
@@ -87,6 +87,34 @@
                     </figure>
                 </div>
             </div>
+
+            <div class="row justify-content-end">
+                <div class="col-6 text-sm-right col-sm-3 py-5">
+                    <figure id="HTML-Icon">
+                        <i class="fab fa-html5"></i> 
+                        <h4> HTML  </h4>
+                    </figure>
+                </div>
+
+                <div class="col-6 text-sm-right col-sm-3 py-5">
+                    <figure id="CSS-Icon">
+                        <i class="fab fa-css3"></i> 
+                        <h4> CSS  </h4>
+                    </figure>
+                </div>
+            </div>
+
+            <div class="row justify-content-end">
+                <div class="col-6 text-sm-right col-sm-3 py-5">
+                    <figure id="sqlite-Icon">
+                        <i class="fas fa-database"></i> 
+                        <h4> sqlite  </h4>
+                    </figure>
+                </div>
+            </div>
+            
+
+            
 
             <br/>
             <!-- <h3>Learning / To Learn</h3> -->
