--- a/public/Projects/geo<>code/index.html
+++ b/public/Projects/geo<>code/index.html
@@ -31,13 +31,13 @@
         </button>
 
 
-        <li> <a class="navbar-brand" href="../index.html"><span class="fa fa-home"></span></a> </li>
+        <li> <a class="navbar-brand" href="../../index.html"><span class="fa fa-home"></span></a> </li>
 
-        <li> <a  class="navbar-text" href="../About/index.html">About</a> </li>
+        <li> <a  class="navbar-text" href="../../About/index.html">About</a> </li>
 
-        <li> <a class="navbar-text" href="../Contact/">Contact</a> </li>
+        <li> <a class="navbar-text" href="../../Contact/">Contact</a> </li>
 
-        <li> <a  id="selected-heading" class="navbar-text" href="../Projects/index.html">Projects</a> </li>
+        <li> <a  id="selected-heading" class="navbar-text" href="../../Projects/index.html">Projects</a> </li>
 
 
     
