--- a/public/Projects/noxlock.dev/index.html
+++ b/public/Projects/noxlock.dev/index.html
@@ -31,13 +31,13 @@
         </button>
 
     
-        <li> <a class="navbar-brand" href="../index.html"><span class="fa fa-home"></span></a> </li>
+        <li> <a class="navbar-brand" href="../../index.html"><span class="fa fa-home"></span></a> </li>
 
-        <li> <a  class="navbar-text" href="../About/index.html">About</a> </li>
+        <li> <a  class="navbar-text" href="../../About/index.html">About</a> </li>
 
-        <li> <a class="navbar-text" href="../Contact/">Contact</a> </li>
+        <li> <a class="navbar-text" href="../../Contact/">Contact</a> </li>
 
-        <li> <a  id="selected-heading" class="navbar-text" href="../Projects/index.html">Projects</a> </li>
+        <li> <a  id="selected-heading" class="navbar-text" href="../../Projects/index.html">Projects</a> </li>
 
 
     
@@ -94,6 +94,30 @@
                         </br>
                         </br>
                         <h4>Development Log</h4>
+                        </br>
+                        <h5>26/02/20</h5>
+                        <p>Configured CI to only listen to master branch.</p>
+                        </br>
+                        <h5>10/02/20</h5>
+                        <p>Worked on geo<>code project page.</p>
+                        </br>
+                        <h5>8/02/20</h5>
+                        <p>Made Projects page responsive.</p>
+                        </br>
+                        <h5>9/12/19</h5>
+                        <p>Fixed anchors, added project page.</p>
+                        </br>
+                        <h5>8/12/19</h5>
+                        <p>Fixed strange SRI issues, refractored HTML structure</p>
+                        </br>
+                        <h5>5/12/19</h5>
+                        <p>Hid blog page for maintenance</p>
+                        </br>
+                        <h5>23/09/19</h5>
+                        <p>Setup CI/CD pipeline with CircleCI</p>
+                        </br>
+                        <h5>10/08/19</h5>
+                        <p>Added branches for different font variations</p>
                     </div>
                 </div>
             </div>
