--- a/public/About/index.html
+++ b/public/About/index.html
@@ -48,7 +48,7 @@
             <h4>Hi, I'm Noxlock. </h4> <br/>  
             <p>
             I'm a junior developer interested in all things cyber,
-            though my main interests is penetration testing, I'd like to be a developer for a while.
+            though my main interest is penetration testing, I'd like to be a developer for a while.
             <br/>
             <br/>
             I'm looking for opportunities surrounding the tech scene,
