Finished FrameInstructor and CombAPI pages.

--- a/public/Projects/CombAPI/index.html
+++ b/public/Projects/CombAPI/index.html
@@ -76,18 +76,19 @@
             </div>
 
                 <div id="content">
-                    <h2>FrameInstructor</h2>
-                        <h3> <a target="blank" href="https://github.com/noxlock/FrameInstructor">Git Repo</a></h3>
+                    <h2>CombAPI</h2>
+                        <h3> <a target="blank" href="https://github.com/noxlock/CombAPI">Git Repo</a></h3>
                         <p>
                         </br>
-                            FrameInstructor is a Python application that uses Discord, instead of the CLI as a front-end to accept user input.
-                            The program does this through the 'discord' Python package, and is hosted on heroku. The application is integrated into Discord
-                            in the form of a chat bot, listening for commands in the given chat room, and fetching data from an API depending on what input was supplied.
+                            CombAPI is my first ever full-stack application, albeit the front-end is lacking compared to the rest. The project is an Express.js API that fetches data from a sqlite database.
+                            Requests can be made by the user either through specific tools such as cURL, or Postman, or they can also be made through the front-end.
                         </p>
                         </br>
                         <p>
-                            The data fetched from the API is related to specific moves in the online fighting game Tekken 7, the data included provides information on things like how much damage the move does,
-                            what type of status it inflicts after it hits an opponent, ect.
+                            The front-end is purely HTML & CSS, rendered by Express using Pug as a templating engine. The database and it's tables are loosely based on 
+                            what you'd find in the database of a VoIP application such as Discord, or maybe Slack.
+                        </br>
+                            The full documentation on specific routes, and what they do is available at the GitHub repository.
                         </p>
                     </div>
                 </div>
