--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -112,8 +112,23 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
+
+                        <div class="row">
+                            <div class="col-12 text-sm-center col-sm-4 py-5">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">CombAPI</h4>
+                                        <h5 class="card-subtitle text-muted">Node, HTML & CSS, sqlite</h5>
+                                        <p class="card-text"> An Express.js API that retrieves data from a database and serves it on a basic HTML & CSS front-end</p>
+                                        <a href="./CombAPI/index.html" class="card-link">View Page</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            
+                        </div>
+
                     </div>
                 </div>
             </div>
