--- a/public/Projects/noxlock.dev/index.html
+++ b/public/Projects/noxlock.dev/index.html
@@ -66,6 +66,9 @@
                                         <li>
                                             <a href="../geo<>code/index.html">Geo<>Code</a>
                                         </li>
+                                        <li>
+                                            <a href="../CombAPI/index.html">CombAPI</a>
+                                        </li>
                                     </ul>
                                 </li>
                             </ul>
