added nomad to projects, added postgres to skills, fixed ordering of sidebar

--- a/public/About/index.html
+++ b/public/About/index.html
@@ -109,7 +109,7 @@
                 <div class="col-6 text-sm-right col-sm-3 py-5">
                     <figure id="sqlite-Icon">
                         <i class="fas fa-database"></i> 
-                        <h4> sqlite  </h4>
+                        <h4> sqlite + PostGreSQL </h4>
                     </figure>
                 </div>
             </div>
@@ -139,7 +139,7 @@
 <!-- FOOTER -->
 <footer class="footer">
     <div class="container-fluid">
-        <p id="footer-text">noxlock &copy; 2019</p>
+        <p id="footer-text">noxlock &copy; 2020</p>
     </div>
 </footer>
 </div>
