--- a/public/Projects/geo<>code/index.html
+++ b/public/Projects/geo<>code/index.html
@@ -58,16 +58,19 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="../FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="./Nomad/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="../noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="./CombAPI/index.html">CombAPI</a>
                                         </li>
                                         <li>
-                                            <a href="../geo<>code/index.html">Geo<>Code</a>
+                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="../CombAPI/index.html">CombAPI</a>
+                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                        </li>
+                                        <li>
+                                            <a href="./geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -115,7 +118,7 @@
 <!-- FOOTER -->
 <footer class="footer">
         <div class="container-fluid">
-            <p id="footer-text">noxlock &copy; 2019</p>
+            <p id="footer-text">noxlock &copy; 2020</p>
         </div>
     </footer>
 </div>
