--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -59,16 +59,19 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
+                                            <a href="./Nomad/index.html">Nomad</a>
+                                        </li>
+                                        <li>
+                                            <a href="./CombAPI/index.html">CombAPI</a>
+                                        </li>
+                                        <li>
                                             <a href="./FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
                                             <a href="./noxlock.dev/index.html">noxlock.dev</a>
                                         </li>
                                         <li>
-                                            <a href="./geo<>code/index.html">Geo<>Code</a>
-                                        </li>
-                                        <li>
-                                            <a href="./CombAPI/index.html">CombAPI</a>
+                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -86,6 +89,29 @@
                             <div class="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
+                                        <h4 class="card-title">Nomad</h4>
+                                        <h5 class="card-subtitle text-muted">MERN Stack</h5>
+                                        <p class="card-text">A SPA to help you learn German.</p>
+                                        <a href="./Nomad/index.html" class="card-link">View Page</a>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class ="col-12 text-sm-center col-sm-4 py-5">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="card-title">CombAPI</h4>
+                                        <h5 class="card-subtitle text-muted">Node, HTML & CSS, sqlite</h5>
+                                        <p class="card-text"> An Express.js API that retrieves data from a database and serves it on a basic HTML & CSS front-end</p>
+                                        <a href="./CombAPI/index.html" class="card-link">View Page</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class ="col-12 text-sm-center col-sm-4 py-5">
+                                <div class="card">
+                                    <div class="card-body">
                                         <h4 class="card-title">FrameInstructor</h4>
                                         <h5 class="card-subtitle text-muted">Python</h5>
                                         <p class="card-text"> A Discord chat bot that retrives data from fANZyo's T7 API</p>
@@ -93,8 +119,10 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
 
-                            <div class ="col-12 text-sm-center col-sm-4 py-5">
+                        <div class="row">
+                            <div class="col-12 text-sm-center col-sm-4 py-5">
                                 <div class="card">
                                     <div class="card-body">
                                         <h4 class="card-title">noxlock.dev</h4>
@@ -112,19 +140,6 @@
                                         <h5 class="card-subtitle text-muted">Python</h5>
                                         <p class="card-text">A Python CLI app that performs geocode operations</p>
                                         <a href="./geo<>code/index.html" class="card-link">View Page</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-12 text-sm-center col-sm-4 py-5">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <h4 class="card-title">CombAPI</h4>
-                                        <h5 class="card-subtitle text-muted">Node, HTML & CSS, sqlite</h5>
-                                        <p class="card-text"> An Express.js API that retrieves data from a database and serves it on a basic HTML & CSS front-end</p>
-                                        <a href="./CombAPI/index.html" class="card-link">View Page</a>
                                     </div>
                                 </div>
                             </div>
@@ -154,7 +169,7 @@
 <!-- FOOTER -->
 <footer class="footer">
         <div class="container-fluid">
-            <p id="footer-text">noxlock &copy; 2019</p>
+            <p id="footer-text">noxlock &copy; 2020</p>
         </div>
     </footer>
 </div>
