--- a/public/Projects/noxlock.dev/index.html
+++ b/public/Projects/noxlock.dev/index.html
@@ -58,16 +58,19 @@
                                 <li> -->
                                     <ul class="list-unstyled" id="project-list">
                                         <li>
-                                            <a href="../FrameInstructor/index.html">FrameInstructor</a>
+                                            <a href="./Nomad/index.html">Nomad</a>
                                         </li>
                                         <li>
-                                            <a href="../noxlock.dev/index.html">noxlock.dev</a>
+                                            <a href="./CombAPI/index.html">CombAPI</a>
                                         </li>
                                         <li>
-                                            <a href="../geo<>code/index.html">Geo<>Code</a>
+                                            <a href="./FrameInstructor/index.html">FrameInstructor</a>
                                         </li>
                                         <li>
-                                            <a href="../CombAPI/index.html">CombAPI</a>
+                                            <a href="./noxlock.dev/index.html">noxlock.dev</a>
+                                        </li>
+                                        <li>
+                                            <a href="./geo<>code/index.html">Geo<>Code</a>
                                         </li>
                                     </ul>
                                 </li>
@@ -96,6 +99,9 @@
                         </br>
                         </br>
                         <h4>Development Log</h4>
+                        </br>
+                        <h5>1/07/20</h5>
+                        <p>Added Nomad to projects, added Postgres to skills, updated copyright.</p>
                         </br>
                         <h5>26/02/20</h5>
                         <p>Updated Bootstrap & jQuery resources due to vulnerabilities</p>
@@ -148,7 +154,7 @@
 <!-- FOOTER -->
 <footer class="footer">
         <div class="container-fluid">
-            <p id="footer-text">noxlock &copy; 2019</p>
+            <p id="footer-text">noxlock &copy; 2020</p>
         </div>
     </footer>
 </div>
