fix FA integrity

--- a/public/About/index.html
+++ b/public/About/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     
 
-    <script src="https://kit.fontawesome.com/d0a9161acf.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d0a9161acf.js" integrity="sha384-Y9Cj50I0Dbus8c/yjudUHiWuuqDpXCn4P040Wy9cqSmDGO5qnyf1EwK5zgmHr6/F" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
